kubernetes/grafana-ui.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: loki-grafana
  namespace: loki

spec:
  rules:
    - host: grafana.bar.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
